# BioSim_G10_Daniil_Sigurd

./: .gitignore  README.md  requirements.txt  setup.cfg  tox.ini
doc/: animals.rst  conf.py  index.rst  island.rst  simulation.rst
doc/_build/doctrees/: animals.doctree  annual_cycle.doctree  environment.pickle  index.doctree  island.doctree  landscape.doctree  simulation.doctree
doc/_build/html/: .buildinfo  animals.html  annual_cycle.html  genindex.html  index.html  island.html  landscape.html  objects.inv  search.html  searchindex.js  simulation.html
doc/_build/html/_sources/: annual_cycle.rst.txt  landscape.rst.txt
examples/: check_sim.py  run_sim.py  run_simulation.py
src/biosim/: Island.py  __init__.py  animals.py  annual_cycle.py  island.py  landscape.py  mapvisualiser.py  simulation.py
tests/: test_animals.py  test_annual_cycle.py  test_biosim_interface.py  test_island.py  test_landscape.py
