[metadata]
name = biosim
description = A population dynamics simulation written in Python
long_description = file: README.rst
author = Daniil Efremov & Sigurd Grøtan
author_email = daniil.efremov98@gmail.com sigurd.grotan@gmail.com

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    matplotlib
    numpy
    pandas

[options.packages.find]
where=src